objects/AR_Obj1__c.object
<CustomObject>
    <description>Modify</description>
    <fields>
        <fullName>F2__c</fullName>
        <label>F2</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pl2__c</fullName>
        <label>Pl2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>f4__c</fullName>
        <label>f4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>AR-Obj1</label>
    <nameField>
        <label>AR-Obj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR-Obj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>